--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,3 +1,13 @@
+footer {
+  .product_list_widget li {
+    border-bottom: 1px solid rgba(255,255,255,0.4);
+  }
+}
 .site-footer a:not(.button) {
-  color: #fff;
+  color: $mainTeal;
+  transition: all .3s;
+  &:hover {
+    color: $mainTeal;
+    transform: translateY(-3px);
+  }
 }
