--- a/css/misc.scss
+++ b/css/misc.scss
@@ -5,16 +5,37 @@ ul.products li.product.product-category img {
     transform: scale(1.1);
   }
 }
-
+.post-10 {
+  margin-bottom: 0;
+}
 .storefront-product-categories .section-title {
   display: none;
 }
+.one-half {
+  flex: 0 0 50%;
+}
 .row-full{
-background: #f3f3f3;
 width: 100vw;
-padding: 2rem 5px;
 position: relative;
 margin-left: -50vw;
-margin-top: 100px;
+// margin-top: 100px;
 left: 50%;
+}
+@include atSmallMedium {
+  .content {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
+};
+
+.hentry .entry-header, .alpha, .entry-header {
+  border-bottom: none;
+  margin-bottom: 0;
+}
+.post-excert {
+  margin-top: 1.5em;
+}
+.home-group {
+  padding-top: 4em;
 }
