--- a/css/header.scss
+++ b/css/header.scss
@@ -1,8 +1,10 @@
-
+.page-template-template-homepage .type-page {
+  padding-bottom: 5.5em;
+}
 .site-header ul.menu li.current-menu-item > a {
   font-weight: bold;
   color: #222;
-  border-bottom: 2px solid $mainTeal;
+  border-bottom: 5px solid $mainTeal;
 }
 
 .menu-toggle {
@@ -22,8 +24,6 @@
 
 @include atSmallMedium{
   .storefront-primary-navigation {
-    border-top: 1px solid $mainTeal;
-    border-bottom: 1px solid $mainTeal;
     background: #222;
     color: #fff;
   }
