--- a/style.css
+++ b/style.css
@@ -1,1 +1,521 @@
-body{font-family:'Open Sans', sans-serif}h1,h2,h3,h4{font-family:'Viga', sans-serif}.headline--gradient:hover{background:-webkit-gradient(linear, left top, right top, from(#096c7d), color-stop(60%, #4ddbf8), to(#4ddbf8));background:linear-gradient(to right, #096c7d 0%, #4ddbf8 60%, #4ddbf8 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent}.bg-grey{background:#f9f9f9}.c-purple{color:#4ddbf8}.c-grey{color:#222}.t-center{text-align:center}.hentry .entry-content .wp-block-button:not(.is-style-squared) .wp-block-button__link{border:2px solid #000;-webkit-box-shadow:0px 0px 3px 2px #888;box-shadow:0px 0px 3px 2px #888}.hentry .entry-content .wp-block-button:not(.is-style-squared) .wp-block-button__link:hover{background:rgba(0,0,0,0.7)}.btn{border-radius:11px}.btn--dgrey{background:#222;color:#fff}.added_to_cart{border-radius:11px;background:-webkit-gradient(linear, left top, right top, from(#c0e7ed), to(#4ddbf8));background:linear-gradient(to right, #c0e7ed 0%, #4ddbf8 100%);color:#222}.added_to_cart:hover{color:#fff;background:#222}ul.products li.product .button,.single_add_to_cart_button,.btn.alt{border-radius:11px;background:#222;color:#fff}ul.products li.product .button:hover,.single_add_to_cart_button:hover,.btn.alt:hover{background:-webkit-gradient(linear, left top, right top, from(#c0e7ed), to(#4ddbf8));background:linear-gradient(to right, #c0e7ed 0%, #4ddbf8 100%);color:#222}.single_add_to_cart_button .icon{margin-right:7px}.site-header ul.menu li.current-menu-item>a{font-weight:bold;color:#222;border-bottom:2px solid #4ddbf8}.menu-toggle{background:blue;border-radius:44px}.site-branding{width:60%}.site-branding svg{max-width:111px}@media (min-width: 768px){.storefront-primary-navigation{border-top:1px solid #4ddbf8;border-bottom:1px solid #4ddbf8;background:#222;color:#fff}.main-navigation ul.menu>li>a,.main-navigation ul.nav-menu>li>a{color:#fff}.cart-contents a{color:#fff}.site-header ul.menu li.current-menu-item>a{color:#999}.site-header-cart .cart-contents .amount{color:#fff}.site-header-cart .cart-contents .count{color:#fff;opacity:1}.site-header-cart .cart-contents::after{color:#4ddbf8}}footer .product_list_widget li{border-bottom:1px solid rgba(255,255,255,0.4)}.site-footer a:not(.button){color:#4ddbf8;-webkit-transition:all .3s;transition:all .3s}.site-footer a:not(.button):hover{color:#4ddbf8;-webkit-transform:translateY(-3px);transform:translateY(-3px)}.onsale{border:none;background:#4ddbf8;color:#222}.saved-amount{border:2px solid #4ddbf8;border-radius:11px;display:inline-block;font-size:.8em;font-weight:bold;padding:.5rem;margin-top:15px}.saved-amount .amount{font-size:1em;font-weight:normal}.woocommerce-message,.woocommerce-message .button,.woocommerce-noreviews{background:#4ddbf8;color:#222}.stock.in-stock{color:#08abcd}ul.products li.product.product-category img{-webkit-transform:scale(1);transform:scale(1);-webkit-transition:all .4s;transition:all .4s}ul.products li.product.product-category img:hover{-webkit-transform:scale(1.1);transform:scale(1.1)}.post-10{margin-bottom:0}.storefront-product-categories .section-title{display:none}.one-half{-webkit-box-flex:0;-ms-flex:0 0 50%;flex:0 0 50%}.row-full{width:100vw;position:relative;margin-left:-50vw;left:50%}@media (min-width: 768px){.content{-webkit-box-align:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}}.hentry .entry-header,.alpha,.entry-header{border-bottom:none;margin-bottom:0}.post-excert{margin-top:1.5em}.home-group{padding-top:4em}.slick-slider{position:relative;display:block;-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none;-khtml-user-select:none;-ms-touch-action:pan-y;touch-action:pan-y;-webkit-tap-highlight-color:transparent}.slick-list{position:relative;display:block;overflow:hidden;margin:0;padding:0}.slick-list:focus{outline:none}.slick-list.dragging{cursor:pointer;cursor:hand}.slick-slider .slick-track,.slick-slider .slick-list{-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0)}.slick-track{position:relative;top:0;left:0;display:block;margin-left:auto;margin-right:auto}.slick-track:before,.slick-track:after{display:table;content:''}.slick-track:after{clear:both}.slick-loading .slick-track{visibility:hidden}.slick-slide{display:none;float:left;min-height:1px}[dir='rtl'] .slick-slide{float:right}.slick-slide img{display:block}.slick-slide.slick-loading img{display:none}.slick-slide.dragging img{pointer-events:none}.slick-initialized .slick-slide{display:block}.slick-loading .slick-slide{visibility:hidden}.slick-vertical .slick-slide{display:block;height:auto;border:1px solid transparent}.slick-arrow.slick-hidden{display:none}.hero-slider{position:relative}.hero-slider div{outline:none}.hero-slider__interior{padding-top:60px;padding-bottom:60px}@media (min-width: 960px){.hero-slider__interior{padding-top:130px;padding-bottom:130px}}.hero-slider__slide{background-size:cover;background-repeat:no-repeat}.hero-slider__overlay{margin:0 auto;background-color:rgba(0,0,0,0.68);padding:40px;color:#FFF}@media (min-width: 960px){.hero-slider__overlay{width:50%}}.slick-dots{z-index:100;position:absolute;left:0;right:0;padding:0;margin:0;text-align:center;top:15px}@media (min-width: 960px){.slick-dots{top:50px}}.slick-dots li{list-style:none;display:inline}.slick-dots li button{display:inline-block;text-indent:-9999px;font-size:0;line-height:0;width:10px;height:10px;background-color:rgba(255,255,255,0.5);-webkit-box-shadow:1px 1px 1px rgba(0,0,0,0.25);box-shadow:1px 1px 1px rgba(0,0,0,0.25);border-radius:50%;border:none;margin:0 4px;padding:0;outline:none;-webkit-transition:background-color .3s ease-out;transition:background-color .3s ease-out;cursor:pointer}.slick-dots .slick-active button{background-color:#222}.hero-slider{background-size:cover;padding-top:25px;margin-bottom:4em}.hero-slider__slide h2{color:#fff;font-size:3rem;text-align:center}.hero-slider .cols-2 p{padding:1em;color:#fff}@media (min-width: 768px){.hero-slider .cols-2{-webkit-box-align:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.hero-slider .cols-2 p{-webkit-box-flex:0;-ms-flex:0 0 50%;flex:0 0 50%}.hero-slider .cols-2 .slider-product{-webkit-box-flex:0;-ms-flex:0 0 50%;flex:0 0 50%;margin:0}}.slider-product{max-width:130px;margin:0 auto}.slider-product h2,.slider-product h3,.slider-product span{color:#fff}@media (min-width: 1111px){.slider-product{max-width:222px}}.slider-product .onsale{color:#222}.hero-slider ul.products li.product{margin-bottom:0}
+/*
+  Theme Name: Elite Hemp CBD
+  Description: Child theme of storefront
+  Author: Tanner Hoffman
+  Author URI: https//tannerhoffman.space
+  Template: storefront
+  Version: 1.0.0
+  License: GNU General Public License v2 or later
+  License URI: http://www.nu.org/licenses/gpl-2.0.html
+  Tags: woocommerce, spa, responsive layout
+  Text Domain: storefront
+*/
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Viga', sans-serif;
+}
+
+.headline--gradient:hover {
+  background: -webkit-gradient(linear, left top, right top, from(#096c7d), color-stop(60%, #4ddbf8), to(#4ddbf8));
+  background: linear-gradient(to right, #096c7d 0%, #4ddbf8 60%, #4ddbf8 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.bg-grey {
+  background: #f9f9f9;
+}
+
+.c-purple {
+  color: #4ddbf8;
+}
+
+.c-grey {
+  color: #222;
+}
+
+.t-center {
+  text-align: center;
+}
+
+.hentry .entry-content .wp-block-button:not(.is-style-squared) .wp-block-button__link {
+  border: 2px solid #000;
+  -webkit-box-shadow: 0px 0px 3px 2px #888;
+          box-shadow: 0px 0px 3px 2px #888;
+}
+
+.hentry .entry-content .wp-block-button:not(.is-style-squared) .wp-block-button__link:hover {
+  background: -webkit-gradient(linear, left top, right top, from(#c0e7ed), to(#4ddbf8));
+  background: linear-gradient(to right, #c0e7ed 0%, #4ddbf8 100%);
+  color: #222;
+}
+
+.btn {
+  border-radius: 11px;
+}
+
+.btn--dgrey {
+  background: #222;
+  color: #fff;
+}
+
+.added_to_cart {
+  border-radius: 11px;
+  background: -webkit-gradient(linear, left top, right top, from(#c0e7ed), to(#4ddbf8));
+  background: linear-gradient(to right, #c0e7ed 0%, #4ddbf8 100%);
+  color: #222;
+}
+
+.added_to_cart:hover {
+  color: #fff;
+  background: #222;
+}
+
+ul.products li.product .button, .single_add_to_cart_button, .btn.alt {
+  border-radius: 11px;
+  background: #222;
+  color: #fff;
+}
+
+ul.products li.product .button:hover, .single_add_to_cart_button:hover, .btn.alt:hover {
+  background: -webkit-gradient(linear, left top, right top, from(#c0e7ed), to(#4ddbf8));
+  background: linear-gradient(to right, #c0e7ed 0%, #4ddbf8 100%);
+  color: #222;
+}
+
+.single_add_to_cart_button .icon {
+  margin-right: 7px;
+}
+
+.page-template-template-homepage .type-page {
+  padding-bottom: 5.5em;
+}
+
+.site-header ul.menu li.current-menu-item > a {
+  font-weight: bold;
+  color: #222;
+  border-bottom: 5px solid #4ddbf8;
+}
+
+.menu-toggle {
+  background: blue;
+  border-radius: 44px;
+}
+
+.current_page_item a {
+  /* text-decoration-color: purple; */
+}
+
+.site-branding {
+  width: 60%;
+}
+
+.site-branding svg {
+  max-width: 111px;
+}
+
+@media (min-width: 768px) {
+  .storefront-primary-navigation {
+    background: #222;
+    color: #fff;
+  }
+  .main-navigation ul.menu > li > a, .main-navigation ul.nav-menu > li > a {
+    color: #fff;
+  }
+  .cart-contents a {
+    color: #fff;
+  }
+  .site-header ul.menu li.current-menu-item > a {
+    color: #999;
+  }
+  .site-header-cart .cart-contents .amount {
+    color: #fff;
+  }
+  .site-header-cart .cart-contents .count {
+    color: #fff;
+    opacity: 1;
+  }
+  .site-header-cart .cart-contents::after {
+    color: #4ddbf8;
+  }
+}
+
+footer .product_list_widget li {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.site-footer a:not(.button) {
+  color: #4ddbf8;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.site-footer a:not(.button):hover {
+  color: #4ddbf8;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
+.onsale {
+  border: none;
+  background: #4ddbf8;
+  color: #222;
+}
+
+.saved-amount {
+  border: 2px solid #4ddbf8;
+  border-radius: 11px;
+  display: inline-block;
+  font-size: .8em;
+  font-weight: bold;
+  padding: .5rem;
+  margin-top: 15px;
+}
+
+.saved-amount .amount {
+  font-size: 1em;
+  font-weight: normal;
+}
+
+.woocommerce-message, .woocommerce-message .button, .woocommerce-noreviews {
+  background: #4ddbf8;
+  color: #222;
+}
+
+.stock.in-stock {
+  color: #08abcd;
+}
+
+ul.products li.product.product-category img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+ul.products li.product.product-category img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.post-10 {
+  margin-bottom: 0;
+}
+
+.storefront-product-categories .section-title {
+  display: none;
+}
+
+.one-half {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.row-full {
+  width: 100vw;
+  position: relative;
+  margin-left: -50vw;
+  left: 50%;
+}
+
+@media (min-width: 768px) {
+  .content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.hentry .entry-header, .alpha, .entry-header {
+  border-bottom: none;
+  margin-bottom: 0;
+}
+
+.post-excert {
+  margin-top: 1.5em;
+}
+
+.home-group {
+  padding-top: 4em;
+}
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: '';
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+.hero-slider {
+  position: relative;
+}
+
+.hero-slider div {
+  outline: none;
+}
+
+.hero-slider__interior {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media (min-width: 960px) {
+  .hero-slider__interior {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+}
+
+.hero-slider__slide {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero-slider__overlay {
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.68);
+  padding: 40px;
+  color: #FFF;
+}
+
+@media (min-width: 960px) {
+  .hero-slider__overlay {
+    width: 50%;
+  }
+}
+
+.slick-dots {
+  z-index: 100;
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  top: 15px;
+}
+
+@media (min-width: 960px) {
+  .slick-dots {
+    top: 50px;
+  }
+}
+
+.slick-dots li {
+  list-style: none;
+  display: inline;
+}
+
+.slick-dots li button {
+  display: inline-block;
+  text-indent: -9999px;
+  font-size: 0;
+  line-height: 0;
+  width: 10px;
+  height: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 50%;
+  border: none;
+  margin: 0 4px;
+  padding: 0;
+  outline: none;
+  -webkit-transition: background-color .3s ease-out;
+  transition: background-color .3s ease-out;
+  cursor: pointer;
+}
+
+.slick-dots .slick-active button {
+  background-color: #222;
+}
+
+.hero-slider {
+  background-size: cover;
+  padding-top: 25px;
+  margin-bottom: 4em;
+}
+
+.hero-slider__slide h2 {
+  color: #fff;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.hero-slider .cols-2 p {
+  padding: 1.5em;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .hero-slider .cols-2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero-slider .cols-2 p {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 768px) and (min-width: 1111px) {
+  .hero-slider .cols-2 p {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30%;
+            flex: 0 0 30%;
+  }
+}
+
+@media (min-width: 768px) {
+  .hero-slider .cols-2 .slider-product {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    margin: 0;
+  }
+}
+
+@media (min-width: 768px) and (min-width: 1111px) {
+  .hero-slider .cols-2 .slider-product {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 70%;
+            flex: 0 0 70%;
+  }
+}
+
+.slider-product {
+  max-width: 130px;
+  margin: 0 auto;
+}
+
+.slider-product h2, .slider-product h3, .slider-product span {
+  color: #fff;
+}
+
+@media (min-width: 1111px) {
+  .slider-product {
+    max-width: 222px;
+  }
+}
+
+.slider-product .onsale {
+  color: #222;
+}
+
+.hero-slider ul.products li.product {
+  margin-bottom: 0;
+}
